changed size and added zindex, still need to fix overlaping with responsive menu

--- a/src/styles/SliderParagraph.css
+++ b/src/styles/SliderParagraph.css
@@ -54,14 +54,15 @@ input:checked + .slide-container .slider-nav label { display: block; }
 }
 
 .slider-nav-dots .slider-nav-dot {
-top: -5px;
-width: 11px;
-height: 11px;
-margin: 0 4px;
-position: relative;
-border-radius: 100%;
-display: inline-block;
-background-color: #C084FC;
+  top: -5px;
+  width: 15px;
+  height: 15px;
+  margin: 0 8px;
+  position: relative;
+  border-radius: 100%;
+  display: inline-block;
+  background-color: var(--brand-color);
+  z-index: 999;
 }
 
 .slider-nav-dots .slider-nav-dot:hover {
